# wanshitong

./: .dockerignore  .gitignore  CHANGELOG.md  Caddyfile  Dockerfile  README.md  app.py  babel.cfg  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
scripts/: run.bash
tests/: conftest.py  test_alembic_upgrade.py  test_all_routes.py  test_basic.py  test_cli.py  test_documentos.py  test_inactive_user.py  test_permissions_and_slug_rules.py  test_security_audit.py
wanshitong/: __init__.py  acl.py  admin.py  app.py  auth.py  cli.py  config.py  documentos.py  forms.py  i18n.py  icon_catalog.py  log.py  md_utils.py  model.py  utils.py  version.py
wanshitong/migrations/: 20260425_01_bootstrap_icons.py  20260426_02_slug_uniqueness_by_root.py  20260512_03_remove_user_level_permissions.py  README
wanshitong/static/: styles.css
wanshitong/templates/: base.html  index.html
wanshitong/templates/admin/: categoria_form.html  categorias.html  configuracion.html  etiqueta_form.html  etiquetas.html  grupo_form.html  grupos.html  usuario_form.html  usuarios.html
wanshitong/templates/auth/: login.html  profile.html
wanshitong/templates/components/: badge.html  breadcrumb.html  nav.html
wanshitong/templates/documentos/: editar.html  historial.html  lista.html  permisos.html  ver.html  ver_version.html
wanshitong/translations/en/LC_MESSAGES/: messages.po
wanshitong/translations/es/LC_MESSAGES/: messages.po
