[project]
name = "wanshitong"
requires-python = ">= 3.11"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*", "vendored/licenses/*.txt", "AUTHORS.md"]
dynamic = ["version", "dependencies"]

[project.scripts]
docsctl = "wanshitong.cli:main"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "wanshitong.version.__version__"}

[tool.pytest.ini_options]
pythonpath = ["."]
